--- a/package.json
+++ b/package.json
@@ -4,20 +4,26 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "node server.js",
+    "dev": "node server/index.js",
     "build": "next build",
-    "start": "NODE_ENV=production node server.js"
+    "start": "NODE_ENV=production node server/index.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@auth0/auth0-spa-js": "^1.6.2",
     "@zeit/next-css": "^1.0.1",
     "@zeit/next-sass": "^1.0.1",
+    "auth0-js": "^9.12.2",
     "axios": "^0.18.0",
     "bootstrap": "^4.1.3",
     "express": "^4.16.4",
+    "express-jwt": "^5.3.1",
+    "js-cookie": "^2.2.1",
+    "jsonwebtoken": "^8.5.1",
+    "jwks-rsa": "^1.6.2",
     "next": "^7.0.2",
     "next-routes": "^1.4.2",
     "node-sass": "^4.9.4",
